Creating paper_tester to work with paperspace

--- a/workspace/Example/Demo.ipynb
+++ b/workspace/Example/Demo.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,10 @@
     "\tframe+=1\n",
     "\n",
     "# Print output in proper json format\n",
-    "print (json.dumps(answer_key))"
+    "tester_data = json.dumps(answer_key)\n",
+    "with open('tester_data', 'w') as f:\n",
+    "    f.write(tester_data)\n",
+    "print(json.dumps(answer_key))\n"
    ]
   },
   {
