Creating crappy car only detector. Fixed bug with demo

--- a/workspace/Example/Demo.ipynb
+++ b/workspace/Example/Demo.ipynb
@@ -55,7 +55,7 @@
     "\tbinary_car_result = np.where(red>250,1,0).astype('uint8')\n",
     "    \n",
     "    # Look for road :)\n",
-    "\tbinary_road_result = binary_car_result = np.where(red<20,1,0).astype('uint8')\n",
+    "\tbinary_road_result = np.where(red<20,1,0).astype('uint8')\n",
     "\n",
     "\tanswer_key[frame] = [encode(binary_car_result), encode(binary_road_result)]\n",
     "    \n",
