Preparing files for submission

--- a/workspace/Example/Score-Unet.ipynb
+++ b/workspace/Example/Score-Unet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "PosixPath('/home/paperspace')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# student_output = sys.argv[1]\n",
-    "student_output = PATH/'tester_data'"
+    "student_output = PATH/'tester_data_multi_take2'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +80,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car F score: 0.021  | Car Precision: 0.005  | Car Recall: 0.094  |\n",
-      "Road F score: 0.926 | Road Precision: 0.927 | Road Recall: 0.922 | \n",
-      "Averaged F score: 0.474\n"
+      "Car F score: 0.675  | Car Precision: 0.676  | Car Recall: 0.675  |\n",
+      "Road F score: 0.988 | Road Precision: 0.989 | Road Recall: 0.983 | \n",
+      "Averaged F score: 0.832\n"
      ]
     }
    ],
