Updating demo submission to fix memory issues

--- a/workspace/Example/Demo-Submission.ipynb
+++ b/workspace/Example/Demo-Submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +65,12 @@
     "        up_p = self.tr_conv(up_p)\n",
     "        x_p = self.x_conv(x_p)\n",
     "        cat_p = torch.cat([up_p,x_p], dim=1)\n",
-    "        return self.bn(F.relu(cat_p))"
+    "        return self.bn(F.relu(cat_p, inplace=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "        \n",
     "    def forward(self,x):\n",
     "        inp = x\n",
-    "        x = F.relu(self.rn(x))\n",
+    "        x = F.relu(self.rn(x), inplace=True)\n",
     "        x = self.up1(x, self.sfs[3].features)\n",
     "        x = self.up2(x, self.sfs[2].features)\n",
     "        x = self.up3(x, self.sfs[1].features)\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,27 +211,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# resized_video = np.array([scipy.misc.imresize(f, size=(512,512)) for f in video])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "imagenet_stats = np.array([[0.485, 0.456, 0.406], [0.229, 0.224, 0.225]])\n",
     "def normalize(x):\n",
+    "    x = x.astype(np.float32)\n",
     "    if np.mean(x) > 1:\n",
-    "        x = x/255\n",
+    "        x /= 255.0\n",
     "    m,s = imagenet_stats\n",
-    "    x = (x-m)/s\n",
+    "    x -= m\n",
+    "    x /= s\n",
     "    return x\n",
     "def preprocess(video):\n",
-    "    f1_norm = normalize(video)\n",
-    "    f1_roll = np.rollaxis(f1_norm, 3, 1)\n",
-    "    f1_pad = np.pad(f1_roll, [(0,0),(0,0),(0,8),(0,0)], mode='constant')\n",
-    "    return f1_pad"
+    "    f1 = normalize(video)\n",
+    "    f1 = np.rollaxis(f1, 3, 1)\n",
+    "#     f1 = np.pad(f1, [(0,0),(0,0),(0,8),(0,0)], mode='constant')\n",
+    "    f1_shape = list(f1.shape)\n",
+    "    f1_shape[2] = 608\n",
+    "    f1_new = np.empty(f1_shape)\n",
+    "    f1_new[:,:,:-8,:] = f1\n",
+    "    return f1_new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_norm = normalize(video)\n",
+    "\n",
+    "f1_roll = np.rollaxis(f1_norm, 3, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_shape = list(f1_roll.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_shape[2] = 608"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_new = np.empty(f1_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_new[:,:,:-8,:] = f1_roll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31, 3, 608, 800)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_new.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_pad = np.pad(f1_roll, [(0,0),(0,0),(0,8),(0,0)], mode='constant')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('uint8')"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +356,9 @@
    "outputs": [],
    "source": [
     "results = []\n",
-    "for i in range(0,f1.shape[0],8):\n",
-    "    xv = torch.autograd.Variable(torch.from_numpy(f1[i:i+8]).contiguous().float())\n",
+    "bs = 4\n",
+    "for i in range(0,f1.shape[0],bs):\n",
+    "    xv = torch.autograd.Variable(torch.from_numpy(f1[i:i+bs]).contiguous().float())\n",
     "    if cuda_enabled:\n",
     "        xv = xv.cuda()\n",
     "    preds = m(xv)\n",
