--- a/workspace/Example/lyft-unet-train6-multiclass-take2.ipynb
+++ b/workspace/Example/lyft-unet-train6-multiclass-take2.ipynb
@@ -293,7 +293,7 @@
     "        up_p = self.tr_conv(up_p)\n",
     "        x_p = self.x_conv(x_p)\n",
     "        cat_p = torch.cat([up_p,x_p], dim=1)\n",
-    "        return self.bn(F.relu(cat_p))"
+    "        return self.bn(F.relu(cat_p, inplace=True))"
    ]
   },
   {
@@ -316,7 +316,7 @@
     "        \n",
     "    def forward(self,x):\n",
     "        inp = x\n",
-    "        x = F.relu(self.rn(x))\n",
+    "        x = F.relu(self.rn(x), inplace=True)\n",
     "        x = self.up1(x, self.sfs[3].features)\n",
     "        x = self.up2(x, self.sfs[2].features)\n",
     "        x = self.up3(x, self.sfs[1].features)\n",
