Trying different resize and crop techniques

--- a/workspace/Example/Score-Unet.ipynb
+++ b/workspace/Example/Score-Unet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "PosixPath('/home/paperspace')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# student_output = sys.argv[1]\n",
-    "student_output = PATH/'tester_data_multi_take2'"
+    "student_output = PATH/'tester_data_crop'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +80,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car F score: 0.675  | Car Precision: 0.676  | Car Recall: 0.675  |\n",
-      "Road F score: 0.988 | Road Precision: 0.989 | Road Recall: 0.983 | \n",
-      "Averaged F score: 0.832\n"
+      "Car F score: 0.657  | Car Precision: 0.718  | Car Recall: 0.643  |\n",
+      "Road F score: 0.987 | Road Precision: 0.987 | Road Recall: 0.987 | \n",
+      "Averaged F score: 0.822\n"
      ]
     }
    ],
@@ -153,10 +153,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-1d295a8aceb3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1d295a8aceb3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    Car F score: 0.657  | Car Precision: 0.718  | Car Recall: 0.643  |\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Padding with no crop\n",
+    "Car F score: 0.657  | Car Precision: 0.718  | Car Recall: 0.643  |\n",
+    "Road F score: 0.987 | Road Precision: 0.987 | Road Recall: 0.987 | \n",
+    "Averaged F score: 0.822"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Real model\n",
+    "# 226:54\n",
+    "Car F score: 0.613  | Car Precision: 0.721  | Car Recall: 0.591  |\n",
+    "Road F score: 0.988 | Road Precision: 0.990 | Road Recall: 0.981 | \n",
+    "Averaged F score: 0.801"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Real model\n",
+    "# 194:54\n",
+    "Car F score: 0.600  | Car Precision: 0.599  | Car Recall: 0.600  |\n",
+    "Road F score: 0.982 | Road Precision: 0.981 | Road Recall: 0.985 | \n",
+    "Averaged F score: 0.791"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 24x64\n",
+    "Car F score: 0.574  | Car Precision: 0.722  | Car Recall: 0.546  |\n",
+    "Road F score: 0.983 | Road Precision: 0.992 | Road Recall: 0.946 | \n",
+    "Averaged F score: 0.778"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 24x0\n",
+    "Car F score: 0.609  | Car Precision: 0.692  | Car Recall: 0.591  |\n",
+    "Road F score: 0.989 | Road Precision: 0.990 | Road Recall: 0.983 | \n",
+    "Averaged F score: 0.799"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 200x80\n",
+    "Car F score: 0.477  | Car Precision: 0.769  | Car Recall: 0.435  |\n",
+    "Road F score: 0.919 | Road Precision: 0.994 | Road Recall: 0.705 | \n",
+    "Averaged F score: 0.698"
+   ]
   }
  ],
  "metadata": {
