Using fp16 for processing

--- a/workspace/Example/lyft-unet-train9-multi-crop-pad.ipynb
+++ b/workspace/Example/lyft-unet-train9-multi-crop-pad.ipynb
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1557,8 +1557,19 @@
       "    0      0.008684   0.054164   0.990891   1.955948  \n",
       "    1      0.00865    0.054376   0.990785   1.955627         \n",
       "    2      0.008511   0.054047   0.990926   1.956038         \n",
-      " 10%|▉         | 6/63 [00:13<02:09,  2.28s/it, loss=0.0085] "
+      "    3      0.008376   0.054519   0.990915   1.955792         \n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.05452]), 0.9909152507781982, 1.9557917872942974]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
