Weighted classes, resnet and more training data

--- a/workspace/Example/Score-Unet.ipynb
+++ b/workspace/Example/Score-Unet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "PosixPath('/home/paperspace')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +80,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car F score: 0.685  | Car Precision: 0.709  | Car Recall: 0.679  |\n",
-      "Road F score: 0.987 | Road Precision: 0.987 | Road Recall: 0.987 | \n",
-      "Averaged F score: 0.836\n"
+      "Car F score: 0.560  | Car Precision: 0.476  | Car Recall: 0.586  |\n",
+      "Road F score: 0.982 | Road Precision: 0.982 | Road Recall: 0.981 | \n",
+      "Averaged F score: 0.771\n"
      ]
     }
    ],
@@ -153,18 +153,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-1d295a8aceb3>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1d295a8aceb3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    Car F score: 0.657  | Car Precision: 0.718  | Car Recall: 0.643  |\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# With new data and data loader\n",
+    "Car F score: 0.560  | Car Precision: 0.476  | Car Recall: 0.586  |\n",
+    "Road F score: 0.982 | Road Precision: 0.982 | Road Recall: 0.981 | \n",
+    "Averaged F score: 0.771"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Best updated\n",
+    "Car F score: 0.685  | Car Precision: 0.709  | Car Recall: 0.679  |\n",
+    "Road F score: 0.987 | Road Precision: 0.987 | Road Recall: 0.987 | \n",
+    "Averaged F score: 0.836"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Padding with no crop\n",
     "Car F score: 0.657  | Car Precision: 0.718  | Car Recall: 0.643  |\n",
