Trying unet implementations

--- a/workspace/Example/lyft-setup-carla-all-subset.ipynb
+++ b/workspace/Example/lyft-setup-carla-all-subset.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,15 @@
     "CARLA_PATH = Path('../data/Carla')\n",
     "CARLA_2_PATH = Path('../data/Carla2')\n",
     "CARLA_3_PATH = Path('../data/Carla3')\n",
+    "CARLA_4_PATH = Path('../data/Carla4')\n",
+    "CARLA_5_PATH = Path('../data/Carla5')\n",
     "OLD_PATH = Path('../data/all.old')\n",
     "ALL_PATH = Path('../data/all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,6 +1308,67 @@
     "    targ_path = ALL_PATH/f_pt[3]/f_pt[-1]\n",
     "    skip = int(fn[-5])%4 != 0\n",
     "    if skip: continue\n",
+    "#     print(targ_path)\n",
+    "    shutil.copy2(f, str(targ_path))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carla 4, 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3640, 5440)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(glob(str(ALL_PATH/(TRAIN_DN+'-150')/'*.png'))), len(glob(str(ALL_PATH/MASKS_DN/'*.png')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_names = glob(str(CARLA_4_PATH/'*/*/*.png'))\n",
+    "for f in c_names:\n",
+    "    f_pt = Path(f).parts\n",
+    "    fn = f_pt[-1]\n",
+    "    skip = int(fn[-5])%4 != 0\n",
+    "    if skip: continue\n",
+    "    targ_path = ALL_PATH/f_pt[4]/('c4_'+f_pt[3]+'_'+f_pt[-1])\n",
+    "#     print(targ_path)\n",
+    "    shutil.copy2(f, str(targ_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_names = glob(str(CARLA_4_PATH/'*/*/*.png'))\n",
+    "for f in c_names:\n",
+    "    f_pt = Path(f).parts\n",
+    "    fn = f_pt[-1]\n",
+    "    skip = int(fn[-5])%4 != 0\n",
+    "    if skip: continue\n",
+    "    targ_path = ALL_PATH/f_pt[4]/('c5_'+f_pt[3]+'_'+f_pt[-1])\n",
     "#     print(targ_path)\n",
     "    shutil.copy2(f, str(targ_path))"
    ]
